// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parsePackage > { exports: { '.': [Object] } } throws an error 1`] = `
[ZodError: [
  {
    "code": "custom",
    "message": "Export must have either \\"default\\", \\"import\\", or \\"require\\" field",
    "path": [
      "exports",
      "."
    ]
  }
]]
`;

exports[`parsePackage > { exports: { '.': [Object] } } throws an error 2`] = `
[ZodError: [
  {
    "code": "custom",
    "message": "Export must have either \\"default\\", \\"import\\", or \\"require\\" field",
    "path": [
      "exports",
      "."
    ]
  }
]]
`;

exports[`parsePackage > { type: 'commonjs' } => { type: 'commonjs', exports: [Object] } 1`] = `
{
  "exports": {
    ".": {
      "default": "./dist/index.cjs",
      "import": "./dist/index.js",
      "require": "./dist/index.cjs",
      "source": "./src/index.ts",
    },
    "./package.json": "./package.json",
  },
  "license": "MIT",
  "name": "dummy-module",
  "type": "commonjs",
  "version": "0.0.0",
}
`;

exports[`parsePackage > { type: 'commonjs', exports: [Object] } => { exports: { '.': [Object] } } 1`] = `
{
  "exports": {
    ".": {
      "default": "./dist/index.js",
      "import": "./dist/index.mjs",
      "require": "./dist/index.js",
      "source": "./src/index.ts",
    },
    "./package.json": "./package.json",
  },
  "license": "MIT",
  "name": "dummy-module",
  "type": "commonjs",
  "version": "0.0.0",
}
`;

exports[`parsePackage > { type: 'esm' } throws an error 1`] = `
[ZodError: [
  {
    "received": "esm",
    "code": "invalid_enum_value",
    "options": [
      "commonjs",
      "module"
    ],
    "path": [
      "type"
    ],
    "message": "Invalid enum value. Expected 'commonjs' | 'module', received 'esm'"
  }
]]
`;

exports[`parsePackage > { type: 'module' } => { exports: { '.': [Object] } } 1`] = `
{
  "exports": {
    ".": {
      "default": "./dist/index.js",
      "import": "./dist/index.js",
      "require": "./dist/index.cjs",
      "source": "./src/index.ts",
    },
    "./package.json": "./package.json",
  },
  "license": "MIT",
  "name": "dummy-module",
  "type": "module",
  "version": "0.0.0",
}
`;

exports[`parsePackage > { type: 'module', exports: [Object] } => { exports: { '.': [Object] } } 1`] = `
{
  "exports": {
    ".": {
      "default": "./dist/index.js",
      "development": "./src/index.ts",
      "import": "./dist/index.js",
      "require": "./dist/index.cjs",
      "source": "./src/index.ts",
    },
    "./package.json": "./package.json",
  },
  "license": "MIT",
  "name": "dummy-module",
  "type": "module",
  "version": "0.0.0",
}
`;

exports[`parsePackage > { type: 'module', exports: [Object] } => { exports: { '.': [Object] } } 2`] = `
{
  "exports": {
    ".": {
      "default": "./dist/index.js",
      "import": "./dist/index.js",
      "monorepo": "./src/index.ts",
      "require": "./dist/index.cjs",
      "source": "./src/index.ts",
    },
    "./package.json": "./package.json",
  },
  "license": "MIT",
  "name": "dummy-module",
  "type": "module",
  "version": "0.0.0",
}
`;

exports[`parsePackage > { type: 'module', …(2) } => { exports: [Object], …(1) } 1`] = `
{
  "exports": {
    ".": {
      "default": "./dist/index.js",
      "monorepo": "./src/index.ts",
      "source": "./src/index.ts",
    },
    "./package.json": "./package.json",
  },
  "license": "MIT",
  "name": "dummy-module",
  "publishConfig": {
    "exports": {
      ".": "./dist/index.js",
    },
  },
  "type": "module",
  "version": "0.0.0",
}
`;

exports[`parsePackage > { type: 'module', …(2) } => { exports: [Object], …(1) } 2`] = `
{
  "exports": {
    ".": {
      "default": "./dist/index.js",
      "development": "./src/index.ts",
      "source": "./src/index.ts",
    },
    "./package.json": "./package.json",
  },
  "license": "MIT",
  "name": "dummy-module",
  "publishConfig": {
    "exports": {
      ".": "./dist/index.js",
    },
  },
  "type": "module",
  "version": "0.0.0",
}
`;

exports[`parsePackage > { type: 'module', …(2) } => { exports: [Object], …(1) } 3`] = `
{
  "exports": {
    ".": {
      "default": "./dist/index.js",
      "development": "./src/index.ts",
      "source": "./src/index.ts",
    },
    "./package.json": "./package.json",
  },
  "license": "MIT",
  "name": "dummy-module",
  "publishConfig": {
    "access": "public",
    "exports": {
      ".": "./dist/index.js",
    },
    "registry": "https://registry.npmjs.org",
    "tag": "latest",
  },
  "type": "module",
  "version": "0.0.0",
}
`;

exports[`parsePackage > { type: undefined } => { type: 'commonjs', exports: [Object] } 1`] = `
{
  "exports": {
    ".": {
      "default": "./dist/index.cjs",
      "import": "./dist/index.js",
      "require": "./dist/index.cjs",
      "source": "./src/index.ts",
    },
    "./package.json": "./package.json",
  },
  "license": "MIT",
  "name": "dummy-module",
  "type": "commonjs",
  "version": "0.0.0",
}
`;
